day3/morning/ingress-example/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  labels:
    app: bggapp-deploy
  namespace: bggns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bggapp-deploy-po
  template:
    metadata:
      labels:
        app: bggapp-deploy-po
    spec:
      containers:
      - name: bggapp-deploy-po
        image: chukmunnlee/dov-bear:v2
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
