day3/morning/ingress-example/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
spec:
  selector:
    app: bggapp-deploy-po
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
