day3/morning/ingress-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-bear-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: bggns
spec:
  ingressClassName: nginx
  rules:
  - host: app.163.47.11.239.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bggapp-svc
            port:
              number: 8080
